--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     working_dir: /var/www
     volumes:
       - .:/var/www
-      - ./docker/php/php.ini:/usr/local/etc/php/php.ini
+      #- ./docker/php/php.ini:/usr/local/etc/php/php.ini
     environment:
       - DB_CONNECTION=mysql
       - DB_HOST=db
