--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     working_dir: /var/www
     volumes:
       - .:/var/www
-      #- ./docker/php/php.ini:/usr/local/etc/php/php.ini
+      - ./docker/php/php.ini:/usr/local/etc/php/php.ini
     environment:
       - DB_CONNECTION=mysql
       - DB_HOST=db
@@ -24,6 +24,7 @@ services:
       - "8000:8000"
     depends_on:
       - db
+      - opensearch
     command: bash -c "composer install && php artisan migrate && php artisan serve --host=0.0.0.0 --port=8000"
 
   db:
@@ -47,6 +48,33 @@ services:
     ports:
       - "5173:5173"
     command: bash -c "npm install && npm run dev"
+    
+  opensearch:
+    image: opensearchproject/opensearch:latest
+    container_name: laravel_breeze_opensearch
+    environment:
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
+      - OPENSEARCH_INITIAL_ADMIN_PASSWORD=${OPENSEARCH_PASSWORD}
+      - network.host=0.0.0.0
+      - http.port=9200
+      - plugins.security.disabled=true
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - opensearch_data:/usr/share/opensearch/data
+    ports:
+      - "9200:9200"
+      - "9600:9600"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9200"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
 volumes:
   db_data:
+  opensearch_data:
