--- a/docker/docker-compose.dev.yaml
+++ b/docker/docker-compose.dev.yaml
@@ -4,14 +4,14 @@ version: '3.8'
 services:
   app:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: docker/Dockerfile.dev
     container_name: laravel_breeze_app
     restart: unless-stopped
     working_dir: /var/www
     volumes:
-      - .:/var/www
-      - ./docker/php/php.ini:/usr/local/etc/php/php.ini
+      - ..:/var/www
+      - ./php/php.ini:/usr/local/etc/php/php.ini
     environment:
       - DB_CONNECTION=mysql
       - DB_HOST=db
@@ -44,7 +44,7 @@ services:
     container_name: laravel_breeze_node
     working_dir: /var/www
     volumes:
-      - .:/var/www
+      - ..:/var/www
     ports:
       - "5173:5173"
     command: bash -c "npm install && npm run dev"
