--- a/docker/docker-compose.prod.yaml
+++ b/docker/docker-compose.prod.yaml
@@ -3,15 +3,13 @@
 version: '3.8'
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: laraplaces
     container_name: laravel_breeze_app
     restart: unless-stopped
-    working_dir: /var/www
     volumes:
-      - .:/var/www
       - ./docker/php/php.ini:/usr/local/etc/php/php.ini
+    networks:
+      - laravel
     environment:
       - DB_CONNECTION=mysql
       - DB_HOST=db
@@ -19,13 +17,27 @@ services:
       - DB_DATABASE=${DB_DATABASE}
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
-    ports:
-      - "9000:9000"
-      - "8000:8000"
+      - APP_ENV=production
+      - APP_DEBUG=false
     depends_on:
       - db
       - opensearch
-    command: bash -c "composer install && php artisan migrate && php artisan serve --host=0.0.0.0 --port=8000"
+
+  webserver:
+    image: nginx:alpine
+    container_name: laravel-webserver-dev
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ..:/var/www
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ./nginx/certs:/etc/nginx/certs
+    depends_on:
+      - app
+    networks:
+      - laravel
 
   db:
     image: mysql:8.0
@@ -34,21 +46,11 @@ services:
     environment:
       MYSQL_DATABASE: ${DB_DATABASE}
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-    ports:
-      - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
+    networks:
+      - laravel
 
-  node:
-    image: node:18
-    container_name: laravel_breeze_node
-    working_dir: /var/www
-    volumes:
-      - .:/var/www
-    ports:
-      - "5173:5173"
-    command: bash -c "npm install && npm run dev"
-    
   opensearch:
     image: opensearchproject/opensearch:latest
     container_name: laravel_breeze_opensearch
@@ -66,14 +68,13 @@ services:
         hard: -1
     volumes:
       - opensearch_data:/usr/share/opensearch/data
-    ports:
-      - "9200:9200"
-      - "9600:9600"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9200"]
       interval: 30s
       timeout: 10s
       retries: 5
+    networks:
+      - laravel
 
   init-opensearch:
     image: curlimages/curl:latest
@@ -97,7 +98,13 @@ services:
       "
     depends_on:
       - opensearch
+    networks:
+      - laravel
 
 volumes:
   db_data:
   opensearch_data:
+
+networks:
+  laravel:
+    driver: bridge
