--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name localhost;
+    server_name garbage-servers.net;
 
     location / {
         return 301 https://$host$request_uri;
@@ -11,10 +11,12 @@ server {
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
-    server_name localhost;
+    server_name garbage-servers.net;
 
-    ssl_certificate /etc/nginx/certs/localhost.crt;
-    ssl_certificate_key /etc/nginx/certs/localhost.key;
+    # Point to the live directory where Certbot stores the certificates
+    
+    ssl_certificate /etc/nginx/certs/fullchain.pem;
+    ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
